gen/PseIntGrammarParser.java
// Generated from /home/andres/Documentos/2021 - II/Lenguajes de Programación/Traductor/Entrega #3/PseIntToPython/grammar/PseIntGrammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PseIntGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TOKEN_INICIOPROCESO=1, TOKEN_FINPROCESO=2, TOKEN_INICIOSUBPROCESO=3, TOKEN_FINSUBPROCESO=4, 
		TOKEN_DEFINIR=5, TOKEN_COMO=6, TOKEN_TIPO=7, TOKEN_COMANDOESPECIAL=8, 
		TOKEN_COMANDOLEER=9, TOKEN_COMANDOESCRIBIR=10, TOKEN_COMANDODIMENSION=11, 
		TOKEN_OTROMODO=12, VERDADERO=13, FALSO=14, PARA=15, QUE=16, HASTA=17, 
		CON=18, PASO=19, HACER=20, FINPARA=21, SI=22, ENTONCES=23, SINO=24, FINSI=25, 
		SEGUN=26, CASO=27, FINSEGUN=28, MIENTRAS=29, FINMIENTRAS=30, REPETIR=31, 
		MOD=32, O=33, Y=34, TOKEN_MAS=35, TOKEN_MENOS=36, TOKEN_MUL=37, TOKEN_DIV=38, 
		TOKEN_PARIZQ=39, TOKEN_PARDER=40, TOKEN_CORIZQ=41, TOKEN_CORDER=42, TOKEN_MOD=43, 
		TOKEN_IGUAL=44, TOKEN_IGUALDAD=45, TOKEN_DIFERENTE=46, TOKEN_MENOR=47, 
		TOKEN_MENORIGUAL=48, TOKEN_MAYOR=49, TOKEN_MAYORIGUAL=50, TOKEN_COMA=51, 
		TOKEN_DOSPUNTOS=52, TOKEN_PUNTOYCOMA=53, TOKEN_COMILLAS=54, TOKEN_COMILLASIMPLE=55, 
		TOKEN_ASIGNACION=56, TOKEN_NEG=57, TOKEN_COMENTARIO=58, TOKEN_O=59, TOKEN_Y=60, 
		TOKEN_POT=61, INT=62, DOUBLE=63, STRING=64, ID=65, SPACE=66, COMMENT=67;
	public static final int
		RULE_programa = 0, RULE_proceso = 1, RULE_subproceso = 2, RULE_id_subproceso = 3, 
		RULE_arg = 4, RULE_comandos = 5, RULE_comando = 6, RULE_comentario = 7, 
		RULE_definicion_variables = 8, RULE_asignacion_variable = 9, RULE_asignacion = 10, 
		RULE_expresion = 11, RULE_term = 12, RULE_factor = 13, RULE_funcion = 14, 
		RULE_comandos_especiales = 15, RULE_comando_escribir = 16, RULE_comando_leer = 17, 
		RULE_dimensionamiento_arreglo = 18, RULE_coma = 19, RULE_expresion_escribir = 20, 
		RULE_condicional_si = 21, RULE_condiciones = 22, RULE_condicion = 23, 
		RULE_comparacion = 24, RULE_condicion_sino = 25, RULE_ciclo_para = 26, 
		RULE_ciclo_mientras = 27, RULE_ciclo_repetirhasta = 28, RULE_paso = 29, 
		RULE_asignacion_para = 30, RULE_comando_segunhacer = 31, RULE_caso = 32, 
		RULE_de_otro_modo = 33, RULE_bool = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "proceso", "subproceso", "id_subproceso", "arg", "comandos", 
			"comando", "comentario", "definicion_variables", "asignacion_variable", 
			"asignacion", "expresion", "term", "factor", "funcion", "comandos_especiales", 
			"comando_escribir", "comando_leer", "dimensionamiento_arreglo", "coma", 
			"expresion_escribir", "condicional_si", "condiciones", "condicion", "comparacion", 
			"condicion_sino", "ciclo_para", "ciclo_mientras", "ciclo_repetirhasta", 
			"paso", "asignacion_para", "comando_segunhacer", "caso", "de_otro_modo", 
			"bool"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'caso'", null, null, null, null, "'mod'", "'o'", "'y'", 
			"'+'", "'-'", "'*'", "'/'", "'('", "')'", "'['", "']'", "'%'", "'='", 
			"'=='", "'<>'", "'<'", "'<='", "'>'", "'>='", "','", "':'", "';'", "'\"'", 
			"'''", "'<-'", null, "'//'", "'|'", "'&'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TOKEN_INICIOPROCESO", "TOKEN_FINPROCESO", "TOKEN_INICIOSUBPROCESO", 
			"TOKEN_FINSUBPROCESO", "TOKEN_DEFINIR", "TOKEN_COMO", "TOKEN_TIPO", "TOKEN_COMANDOESPECIAL", 
			"TOKEN_COMANDOLEER", "TOKEN_COMANDOESCRIBIR", "TOKEN_COMANDODIMENSION", 
			"TOKEN_OTROMODO", "VERDADERO", "FALSO", "PARA", "QUE", "HASTA", "CON", 
			"PASO", "HACER", "FINPARA", "SI", "ENTONCES", "SINO", "FINSI", "SEGUN", 
			"CASO", "FINSEGUN", "MIENTRAS", "FINMIENTRAS", "REPETIR", "MOD", "O", 
			"Y", "TOKEN_MAS", "TOKEN_MENOS", "TOKEN_MUL", "TOKEN_DIV", "TOKEN_PARIZQ", 
			"TOKEN_PARDER", "TOKEN_CORIZQ", "TOKEN_CORDER", "TOKEN_MOD", "TOKEN_IGUAL", 
			"TOKEN_IGUALDAD", "TOKEN_DIFERENTE", "TOKEN_MENOR", "TOKEN_MENORIGUAL", 
			"TOKEN_MAYOR", "TOKEN_MAYORIGUAL", "TOKEN_COMA", "TOKEN_DOSPUNTOS", "TOKEN_PUNTOYCOMA", 
			"TOKEN_COMILLAS", "TOKEN_COMILLASIMPLE", "TOKEN_ASIGNACION", "TOKEN_NEG", 
			"TOKEN_COMENTARIO", "TOKEN_O", "TOKEN_Y", "TOKEN_POT", "INT", "DOUBLE", 
			"STRING", "ID", "SPACE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PseIntGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PseIntGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public ProcesoContext proceso() {
			return getRuleContext(ProcesoContext.class,0);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public List<SubprocesoContext> subproceso() {
			return getRuleContexts(SubprocesoContext.class);
		}
		public SubprocesoContext subproceso(int i) {
			return getRuleContext(SubprocesoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseIntGrammarVisitor ) return ((PseIntGrammarVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(70);
				comentario();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TOKEN_INICIOSUBPROCESO) {
				{
				{
				setState(76);
				subproceso();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			{
			setState(82);
			proceso();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcesoContext extends ParserRuleContext {
		public TerminalNode TOKEN_INICIOPROCESO() { return getToken(PseIntGrammarParser.TOKEN_INICIOPROCESO, 0); }
		public TerminalNode ID() { return getToken(PseIntGrammarParser.ID, 0); }
		public TerminalNode TOKEN_FINPROCESO() { return getToken(PseIntGrammarParser.TOKEN_FINPROCESO, 0); }
		public List<ComandosContext> comandos() {
			return getRuleContexts(ComandosContext.class);
		}
		public ComandosContext comandos(int i) {
			return getRuleContext(ComandosContext.class,i);
		}
		public ProcesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proceso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).enterProceso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).exitProceso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseIntGrammarVisitor ) return ((PseIntGrammarVisitor<? extends T>)visitor).visitProceso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcesoContext proceso() throws RecognitionException {
		ProcesoContext _localctx = new ProcesoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_proceso);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(TOKEN_INICIOPROCESO);
			setState(85);
			match(ID);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 5)) & ~0x3f) == 0 && ((1L << (_la - 5)) & ((1L << (TOKEN_DEFINIR - 5)) | (1L << (TOKEN_COMANDOESPECIAL - 5)) | (1L << (TOKEN_COMANDOLEER - 5)) | (1L << (TOKEN_COMANDOESCRIBIR - 5)) | (1L << (TOKEN_COMANDODIMENSION - 5)) | (1L << (PARA - 5)) | (1L << (SI - 5)) | (1L << (SEGUN - 5)) | (1L << (MIENTRAS - 5)) | (1L << (REPETIR - 5)) | (1L << (ID - 5)) | (1L << (COMMENT - 5)))) != 0)) {
				{
				{
				setState(86);
				comandos();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(TOKEN_FINPROCESO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubprocesoContext extends ParserRuleContext {
		public TerminalNode TOKEN_INICIOSUBPROCESO() { return getToken(PseIntGrammarParser.TOKEN_INICIOSUBPROCESO, 0); }
		public Id_subprocesoContext id_subproceso() {
			return getRuleContext(Id_subprocesoContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode TOKEN_FINSUBPROCESO() { return getToken(PseIntGrammarParser.TOKEN_FINSUBPROCESO, 0); }
		public SubprocesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subproceso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).enterSubproceso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).exitSubproceso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseIntGrammarVisitor ) return ((PseIntGrammarVisitor<? extends T>)visitor).visitSubproceso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubprocesoContext subproceso() throws RecognitionException {
		SubprocesoContext _localctx = new SubprocesoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_subproceso);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(TOKEN_INICIOSUBPROCESO);
			setState(95);
			id_subproceso();
			setState(96);
			comandos();
			setState(97);
			match(TOKEN_FINSUBPROCESO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_subprocesoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PseIntGrammarParser.ID, 0); }
		public TerminalNode TOKEN_ASIGNACION() { return getToken(PseIntGrammarParser.TOKEN_ASIGNACION, 0); }
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public Id_subprocesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_subproceso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).enterId_subproceso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).exitId_subproceso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseIntGrammarVisitor ) return ((PseIntGrammarVisitor<? extends T>)visitor).visitId_subproceso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Id_subprocesoContext id_subproceso() throws RecognitionException {
		Id_subprocesoContext _localctx = new Id_subprocesoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id_subproceso);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(ID);
				setState(101);
				match(TOKEN_ASIGNACION);
				setState(102);
				funcion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(PseIntGrammarParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(PseIntGrammarParser.DOUBLE, 0); }
		public TerminalNode ID() { return getToken(PseIntGrammarParser.ID, 0); }
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).exitArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseIntGrammarVisitor ) return ((PseIntGrammarVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if ( !(((((_la - 62)) & ~0x3f) == 0 && ((1L << (_la - 62)) & ((1L << (INT - 62)) | (1L << (DOUBLE - 62)) | (1L << (ID - 62)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandosContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).exitComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseIntGrammarVisitor ) return ((PseIntGrammarVisitor<? extends T>)visitor).visitComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comandos);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			comando();
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(108);
					comando();
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public Definicion_variablesContext definicion_variables() {
			return getRuleContext(Definicion_variablesContext.class,0);
		}
		public Asignacion_variableContext asignacion_variable() {
			return getRuleContext(Asignacion_variableContext.class,0);
		}
		public Comandos_especialesContext comandos_especiales() {
			return getRuleContext(Comandos_especialesContext.class,0);
		}
		public Comando_escribirContext comando_escribir() {
			return getRuleContext(Comando_escribirContext.class,0);
		}
		public Comando_leerContext comando_leer() {
			return getRuleContext(Comando_leerContext.class,0);
		}
		public Dimensionamiento_arregloContext dimensionamiento_arreglo() {
			return getRuleContext(Dimensionamiento_arregloContext.class,0);
		}
		public Condicional_siContext condicional_si() {
			return getRuleContext(Condicional_siContext.class,0);
		}
		public Ciclo_paraContext ciclo_para() {
			return getRuleContext(Ciclo_paraContext.class,0);
		}
		public Ciclo_mientrasContext ciclo_mientras() {
			return getRuleContext(Ciclo_mientrasContext.class,0);
		}
		public Ciclo_repetirhastaContext ciclo_repetirhasta() {
			return getRuleContext(Ciclo_repetirhastaContext.class,0);
		}
		public Comando_segunhacerContext comando_segunhacer() {
			return getRuleContext(Comando_segunhacerContext.class,0);
		}
		public ComentarioContext comentario() {
			return getRuleContext(ComentarioContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).exitComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseIntGrammarVisitor ) return ((PseIntGrammarVisitor<? extends T>)visitor).visitComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comando);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TOKEN_DEFINIR:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				definicion_variables();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				asignacion_variable();
				}
				break;
			case TOKEN_COMANDOESPECIAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				comandos_especiales();
				}
				break;
			case TOKEN_COMANDOESCRIBIR:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				comando_escribir();
				}
				break;
			case TOKEN_COMANDOLEER:
				enterOuterAlt(_localctx, 5);
				{
				setState(118);
				comando_leer();
				}
				break;
			case TOKEN_COMANDODIMENSION:
				enterOuterAlt(_localctx, 6);
				{
				setState(119);
				dimensionamiento_arreglo();
				}
				break;
			case SI:
				enterOuterAlt(_localctx, 7);
				{
				setState(120);
				condicional_si();
				}
				break;
			case PARA:
				enterOuterAlt(_localctx, 8);
				{
				setState(121);
				ciclo_para();
				}
				break;
			case MIENTRAS:
				enterOuterAlt(_localctx, 9);
				{
				setState(122);
				ciclo_mientras();
				}
				break;
			case REPETIR:
				enterOuterAlt(_localctx, 10);
				{
				setState(123);
				ciclo_repetirhasta();
				}
				break;
			case SEGUN:
				enterOuterAlt(_localctx, 11);
				{
				setState(124);
				comando_segunhacer();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 12);
				{
				setState(125);
				comentario();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComentarioContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(PseIntGrammarParser.COMMENT, 0); }
		public ComentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comentario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).enterComentario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseIntGrammarListener ) ((PseIntGrammarListener)listener).exitComentario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseIntGrammarVisitor ) return ((PseIntGrammarVisitor<? extends T>)visitor).visitComentario(this);
			else return visitor.visitChildren(this);
		}
	}
